# lava-serverless

./: Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md
.github/workflows/: security-gate.yml
src/: lib.rs
